Bug 16494 - system hang on closing T60 panel lid when in dual screen mode (with kernel 2.6.26-rc7)
Summary: system hang on closing T60 panel lid when in dual screen mode (with kernel 2....
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.3 (2007.09)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Jesse Barnes
QA Contact: Xorg Project Team
URL: http://bugs.debian.org/487672
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-23 22:57 UTC by Franklin Piat
Modified: 2008-06-27 13:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
output of lspci -vnn (9.87 KB, text/plain)
2008-06-23 22:57 UTC, Franklin Piat
no flags Details
pipea force enable quirk for t60 (585 bytes, patch)
2008-06-27 13:37 UTC, Jesse Barnes
no flags Details | Splinter Review

Description Franklin Piat 2008-06-23 22:57:49 UTC
Created attachment 17346 [details]
output of lspci -vnn

Latest working kernel version: 2.6.25
Earliest failing kernel version: ? 2.6.26~rc5 (previous RCs not tested).
Distribution: Debian/testing
Hardware Environment: Thinkpad T60 (Intel video chipset)
Software Environment: 
  Debian's xserver-xorg              1:7.3+10 
  Debian's xserver-xorg-video-intel  2:2.3.2-1
  Kernel from http://kernel-archive.buildserver.net/debian-kernel/ 


Problem Description:
 If I close my laptop's panel when I have an external monitor 
 attached and enabled, my laptop freeze... i have to power it off.


Steps to reproduce:
Plug an external screen to a Thinkpad T60 laptop (based on intel chipset).
Then boot the laptop, and log into gnome. Make sure that :
1. Both screen are enabled (xrandr --auto).
2. Gnome power setting has : "When laptop lid is closed" = "Blank Screen"
3. Close the laptop's panel.
=> The laptop is now frozen.

It occurs when : using linux-image-2.6.26-rc5, rc6 or rc7.
Does not occurs with : linux-image-2.6.24 , 2.6.25 from Debian/testing.

Occurs if gnome has "When laptop lid is closed" = "Blank Screen"
Doesn't occur if it's set to "Do nothing"

Occurs on my T60, with :
  Intel 945GM/PM/GMS Express Memory Controller Hub [8086:27a0]
  Intel 945GM/GMS Express Integrated Graphics Controller [8086:27a2] 
Does NOT occur on a T61, with 
  Intel GM965/GL960 Integrated Graphics Controller [8086:2a02]
  Intel GM965/GL960 Integrated Graphics Controller [8086:2a03]

Occurs when both output are enable (crt=on + lvds=on)
Doen not occurs when only one of the screens are enabled (crt=on + lvds=off OR
crt=off + lvds=on).

Note :
The laptop can suspend or hibernate, then resumes correctly.

Running gnome screensaver is ok (but gnome doesn't seems to want
to put the screens in powersave mode).

++++
As requested by Linux kernel maintainers I've tried to enable "ForceEnablePipeA" which works.

I've attached lspci, as requested.

thanks,
Franklin

----
see also:
 http://bugzilla.kernel.org/show_bug.cgi?id=10965#c4 
 http://bugs.debian.org/487672
Comment 1 Jesse Barnes 2008-06-24 18:34:53 UTC
Thanks Franklin, I'll go ahead and push the new quirk in.  You shouldn't need the option anymore in the next release.
Comment 2 Jesse Barnes 2008-06-27 13:37:04 UTC
Created attachment 17431 [details] [review]
pipea force enable quirk for t60

Here's the patch I'm pushing...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.